[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/Backslash-RpJol.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/resources/HeavenlyWings.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/TiffanyLaurenceRegular-MVlpP.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 22
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 3 )
Label/colors/font_color = Color( 0.247059, 0.247059, 0.247059, 1 )
Label/fonts/font = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
resource_local_to_scene = true
bg_color = Color( 0.713726, 0.768627, 0.772549, 0.431373 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.984314, 0.0313726, 0.0313726, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 20
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="DynamicFont" id=23]
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=24]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.905882, 0.905882, 0.905882, 1 )
border_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=11]
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=12]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.905882, 0.905882, 0.905882, 1 )
border_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=15]
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=16]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.905882, 0.905882, 0.905882, 1 )
border_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=19]
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=20]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.905882, 0.905882, 0.905882, 1 )
border_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LabelCentered" type="Label" parent="."]
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.5
margin_left = 1.6
margin_top = -124.0
margin_right = 1.40002
margin_bottom = 33.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 10 )
text = "PAUSED "
align = 1
autowrap = true

[node name="GridContainer" type="GridContainer" parent="LabelCentered"]
margin_left = 310.0
margin_top = 51.0
margin_right = 511.0
margin_bottom = 113.0
mouse_filter = 2

[node name="Continue" type="Button" parent="LabelCentered/GridContainer"]
margin_right = 200.0
margin_bottom = 18.0
rect_min_size = Vector2( 200, 10 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "Continue"

[node name="Checkpoint" type="Button" parent="LabelCentered/GridContainer"]
margin_top = 22.0
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 10 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Checkpoint"

[node name="Options" type="Button" parent="LabelCentered/GridContainer"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 62.0
rect_min_size = Vector2( 200, 10 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
text = "Options"

[node name="Menu" type="Button" parent="LabelCentered/GridContainer"]
margin_top = 66.0
margin_right = 200.0
margin_bottom = 84.0
rect_min_size = Vector2( 200, 10 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
text = "Main Menu"

[connection signal="pressed" from="LabelCentered/GridContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="LabelCentered/GridContainer/Checkpoint" to="." method="_on_Checkpoint_pressed"]
[connection signal="pressed" from="LabelCentered/GridContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="LabelCentered/GridContainer/Menu" to="." method="_on_Menu_pressed"]
